JAVA-PROVIDER-02: Bump up jdk version