@@ -1,14 +1,14 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.0.3'
-    id 'io.spring.dependency-management' version '1.1.0'
+    id 'org.springframework.boot' version '3.1.4'
+    id 'io.spring.dependency-management' version '1.1.3'
     id 'org.flywaydb.flyway' version '8.2.3'
-    id 'com.diffplug.spotless' version '6.18.0'
+    id 'com.diffplug.spotless' version '6.21.0'
 }
 
 group = 'com.klindziuk.java.taf.provider'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '20'
+sourceCompatibility = '21'
 
 configurations {
     compileOnly {
@@ -26,12 +26,10 @@ ext {
     commonsTextVersion = '1.10.0'
     freemarkerVersion = '2.3.32'
     mapstructVersion = '1.5.3.Final'
-    locatorVersion = '0.30'
     lombokMapstructBindingVersion = '0.2.0'
     commonModelVersion = '1.0.6-SNAPSHOT'
     hibernateValidatorVersion = '8.0.1.Final'
-    springDocVersion = '2.0.4'
-    boot = '2.0.2'
+    springDocVersion = '2.2.0'
 }
 
 dependencies {
@@ -53,7 +51,6 @@ dependencies {
             "org.apache.commons:commons-lang3:${commonsLang3Version}",
             "org.apache.commons:commons-text:${commonsTextVersion}",
             "org.freemarker:freemarker:${freemarkerVersion}"
-
     )
 
     runtimeOnly('com.h2database:h2', 'org.postgresql:postgresql')
@@ -64,18 +61,9 @@ dependencies {
     )
 }
 
-tasks.withType(JavaCompile) {
-    options.compilerArgs += "--enable-preview"
-}
-
-tasks.withType(JavaExec) {
-    jvmArgs += "--enable-preview"
-}
-
 bootBuildImage {
     builder = 'paketobuildpacks/builder:tiny'
     imageName = "${project.name}:${version}"
-    environment = ["BP_JVM_TYPE" : "JRE", "BP_JVM_VERSION" : "20.0.2"]
 }
 
 tasks.named('test') {
@@ -89,7 +77,7 @@ spotless {
         endWithNewline()
     }
     java {
-        googleJavaFormat('1.16.0').reflowLongStrings()
+        googleJavaFormat('1.17.0').reflowLongStrings()
         formatAnnotations()
         removeUnusedImports()
         licenseHeader '/*\n * Copyright (c) Dandelion development.\n */\n\n'
